Dont use absolute paths in configuration

--- a/conf.neon
+++ b/conf.neon
@@ -5,7 +5,7 @@ services:
             - phpstan.rules.rule
 
 includes:
-    - /composer/vendor/phpstan/phpstan-phpunit/extension.neon
-    - /composer/vendor/phpstan/phpstan-phpunit/rules.neon
-    - /composer/vendor/phpstan/phpstan-symfony/extension.neon
-    - /composer/vendor/slam/phpstan-extensions/conf/slam-rules.neon
+    - ../../phpstan/phpstan-phpunit/extension.neon
+    - ../../phpstan/phpstan-phpunit/rules.neon
+    - ../../phpstan/phpstan-symfony/extension.neon
+    - ../../slam/phpstan-extensions/conf/slam-rules.neon
