--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     "require": {
         "phpstan/phpstan-phpunit": "^0.11 || ^0.12",
         "phpstan/phpstan-symfony": "^0.11 || ^0.12",
-        "slam/phpstan-extensions": "^3.0 || ^4.0"
+        "slam/phpstan-extensions": "^3.0 || ^4.0 || ^5.0"
     },
     "autoload": {
         "psr-4": {
