--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,9 @@
             "email": "js@simplesurance.de"
         }
     ],
-    "require": {
+    "require-dev": {
         "phpstan/phpstan-beberlei-assert": "^1.0",
+        "phpstan/phpstan-doctrine": "^1.3",
         "phpstan/phpstan-phpunit": "^0.11 || ^0.12 || ^1.0",
         "phpstan/phpstan-symfony": "^0.11 || ^0.12 || ^1.0",
         "slam/phpstan-extensions": "^3.0 || ^4.0 || ^5.0 || ^6.0"
